--- a/src/BlogBundle/Resources/views/Blog/index.html.twig
+++ b/src/BlogBundle/Resources/views/Blog/index.html.twig
@@ -4,7 +4,7 @@
     {% for post in blog %}
         <div class="blog-post">
             <h2 class="blog-post-title"><a href="{{ path('BlogBundle_show', { 'id': post.id }) }}">{{ post.title }}</a></h2>
-            <p class="blog-post-meta">{{ post.created|date('l, j F, Y h:i') }} by <a href="#">{{ post.username }}</a></p>
+            <p class="blog-post-meta">{{ post.created|date('l, j F, Y h:i:s') }} by <a href="#">{{ post.username }}</a></p>
             <p>{{ post.post }}</p>
         </div>
         <!-- /.blog-post -->
